# NebulaEngine

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Nebula.cpp  Nebula.h  README.md  vcpkg.json
Docs/: NebulaDoc
Game/: Game.cpp
LifeGame/: Lifegame.cpp
NebulaEngine/include/: Nebula.h
NebulaEngine/include/Core/: Application.h  Core.h  Engine.h  EntryPoint.h
NebulaEngine/include/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
NebulaEngine/include/ImGui/: ImGuiLayer.h
NebulaEngine/include/Inputs/: InputManager.h
NebulaEngine/include/Layer/: Layer.h  LayerStack.h
NebulaEngine/include/Logger/: Log.h
NebulaEngine/include/Renderer/Api/: RendererApi.h
NebulaEngine/include/Renderer/Buffer/: Buffer.h
NebulaEngine/include/Renderer/Buffer/IndexBuffer/: IndexBuffer.h
NebulaEngine/include/Renderer/Buffer/Layout/: BufferLayout.h
NebulaEngine/include/Renderer/Buffer/VertexBuffer/: VertexBuffer.h
NebulaEngine/include/Renderer/Camera/: OrthographicCamera.h
NebulaEngine/include/Renderer/Command/: RendererCommand.h
NebulaEngine/include/Renderer/Graphics/: GraphicsContext.h
NebulaEngine/include/Renderer/Manager/: RendererManager.h
NebulaEngine/include/Renderer/Render/: Render.h
NebulaEngine/include/Renderer/Render/Shader/: Shader.h
NebulaEngine/include/Renderer/Render/Texture/: Texture.h
NebulaEngine/include/Renderer/Shape/Rectangle/: RectangleShape.h
NebulaEngine/include/Renderer/Shape/Triangle/: TriangleShape.h
NebulaEngine/include/Renderer/VertexArray/: VertexArray.h
NebulaEngine/include/TimeStep/: TimeStep.h
NebulaEngine/include/Window/: Window.h
NebulaEngine/src/Core/: Application.cpp  Engine.cpp
NebulaEngine/src/ImGui/: ImGuiLayer.cpp
NebulaEngine/src/Inputs/: InputManager.cpp
NebulaEngine/src/Layer/: Layer.cpp  LayerStack.cpp
NebulaEngine/src/Logger/: Log.cpp
NebulaEngine/src/Renderer/Api/: RendererApi.cpp
NebulaEngine/src/Renderer/Buffer/IndexBuffer/: IndexBuffer.cpp
NebulaEngine/src/Renderer/Buffer/VertexBuffer/: VertexBuffer.cpp
NebulaEngine/src/Renderer/Camera/: OrthographicCamera.cpp
NebulaEngine/src/Renderer/Command/: RendererCommand.cpp
NebulaEngine/src/Renderer/Graphics/: GraphicsContext.cpp
NebulaEngine/src/Renderer/Manager/: RendererManager.cpp
NebulaEngine/src/Renderer/Render/Shader/: Shader.cpp
NebulaEngine/src/Renderer/Render/Texture/: Texture.cpp
NebulaEngine/src/Renderer/Shape/Rectangle/: RectangleShape.cpp
NebulaEngine/src/Renderer/Shape/Triangle/: TriangleShape.cpp
NebulaEngine/src/Renderer/VertexArray/: VertexArray.cpp
Tests/: CMakeLists.txt
Tests/Units/: BufferLayoutTest.cpp  CMakeLists.txt  CameraTest.cpp  EventSystemTest.cpp  LayerStackTest.cpp  LoggingSystemTest.cpp  RendererSystemTest.cpp  RunTests.cpp  VertexBufferTest.cpp
